--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,20 @@
 {
-  "name": "Compteur de Points Pétanque",
+  "name": "Compteur de Points - Pétanque",
   "short_name": "Pétanque",
-  "start_url": "index.html",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#3367D6",
-  "icons": [{
-    "src": "icon.png",
-    "sizes": "192x192",
-    "type": "image/png"
-  }]
+  "theme_color": "#007bff",
+  "icons": [
+    {
+      "src": "icons/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
